objects/ASA__c.object
<CustomObject>
    <fields>
        <fullName>ASA_Stage__c</fullName>
        <label>ASA Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ASA Scheduled</fullName>
                    <label>ASA Initial Call Scheduled</label>
                </value>
                <value>
                    <fullName>Review Call Scheduled</fullName>
                    <label>Prepare Plan</label>
                </value>
                <value>
                    <fullName>Plan Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Follow Up</fullName>
                </value>
                <value>
                    <fullName>Review Call Complete</fullName>
                    <label>Completed</label>
                </value>
                <value>
                    <fullName>Plan Approved</fullName>
                </value>
                <value>
                    <fullName>Ready for ASP Call</fullName>
                </value>
                <value>
                    <fullName>1 Year Follow-up</fullName>
                </value>
                <value>
                    <fullName>Client Unresponsive</fullName>
                </value>
                <value>
                    <fullName>Engagement Initiated</fullName>
                    <isActive>false</isActive>
                    <label>Engagement Initiated</label>
                </value>
                <value>
                    <fullName>Survey Sent</fullName>
                    <isActive>false</isActive>
                    <label>Survey Sent</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Value_1_457b__c</fullName>
        <label>Account Value 1 457b</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account_Value_1_Roth_401K__c</fullName>
        <label>Account Value 1 Roth 401K</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account_Value_2_457b__c</fullName>
        <label>Account Value 2 457b</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account_Value_2_Roth_401K__c</fullName>
        <label>Account Value 2 Roth 401K</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account_Value_3_Roth_401K__c</fullName>
        <label>Account Value 3 Roth 401K</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account_Value_401k_1__c</fullName>
        <label>Account Value 401k (1)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account_Value_401k_2__c</fullName>
        <label>Account Value 401k (2)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account_Value_401k_3__c</fullName>
        <label>Account Value 401k (3)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account_Value_403b_1__c</fullName>
        <label>Account Value 403b 1</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account_Value_403b_2__c</fullName>
        <label>Account Value 403b 2</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account_Value_403b_3__c</fullName>
        <label>Account Value 403b 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account_Value_IRA_1__c</fullName>
        <label>Account Value IRA 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account_Value_IRA_2__c</fullName>
        <label>Account Value IRA 2</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account_Value_IRA_3__c</fullName>
        <label>Account Value IRA 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account_Value_Simple_IRA_1__c</fullName>
        <label>Account Value Simple IRA 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account_Value_Simple_IRA_2__c</fullName>
        <label>Account Value Simple IRA 2</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account_Value_Simple_IRA_3__c</fullName>
        <label>Account Value Simple IRA 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Additional_Comments__c</fullName>
        <inlineHelpText>Any additional comments related to the client and/or the discussion.</inlineHelpText>
        <label>Additional Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Birthdate__c</fullName>
        <label>Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Business_Assets_1_Current_Value__c</fullName>
        <label>Business Assets 1 Current Value</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Business_Assets_1_Name__c</fullName>
        <label>Business Assets 1 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Assets_1_Owner__c</fullName>
        <label>Business Assets 1 Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Assets_2_Current_Value__c</fullName>
        <label>Business Assets 2 Current Value</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Business_Assets_2_Name__c</fullName>
        <label>Business Assets 2 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Assets_2_Owner__c</fullName>
        <label>Business Assets 2 Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cash_Dividends_1__c</fullName>
        <label>Cash Dividends 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cash_Dividends_2__c</fullName>
        <label>Cash Dividends 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cash_Value_1__c</fullName>
        <label>Cash Value 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cash_Value_2__c</fullName>
        <label>Cash Value 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Charitable_Donations_1_For__c</fullName>
        <label>Charitable Donations 1 For</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charitable_Donations_1_Priority__c</fullName>
        <label>Charitable Donations 1 Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Charitable_Donations_2_For__c</fullName>
        <label>Charitable Donations 2 For</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charitable_Donations_2_Priority__c</fullName>
        <label>Charitable Donations 2 Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Child_1_Birthdate__c</fullName>
        <label>Child 1 Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Child_1_Name__c</fullName>
        <label>Child 1 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_2_Birthdate__c</fullName>
        <label>Child 2 Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Child_2_Name__c</fullName>
        <label>Child 2 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_3_Birthdate__c</fullName>
        <label>Child 3 Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Child_3_Name__c</fullName>
        <label>Child 3 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Contacted_By__c</fullName>
        <inlineHelpText>Who is the financial analyst that spoke to the client regarding insurance options?</inlineHelpText>
        <label>Client Contacted By</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Brandon Smith</fullName>
                </value>
                <value>
                    <fullName>Kenzie Connor</fullName>
                </value>
                <value>
                    <fullName>Rene Barthe</fullName>
                </value>
                <value>
                    <fullName>Ronald Sucre</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Advanced Strategy Analyzers</relationshipLabel>
        <relationshipName>ASA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>College_Savings_Annual_Amount_Needed__c</fullName>
        <label>College Savings Annual Amount Needed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>College_Savings_Priority__c</fullName>
        <label>College Savings Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>ASAS</relationshipLabel>
        <relationshipName>ASAS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Coverage_Amount_1__c</fullName>
        <label>Coverage Amount 1</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Coverage_Amount_2__c</fullName>
        <label>Coverage Amount 2</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Total_Monthly_Expenses__c</fullName>
        <label>Current Total Monthly Expenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Value_1_on_TIA__c</fullName>
        <label>Current Value 1 on TIA</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Value_2_on_TIA__c</fullName>
        <label>Current Value 2 on TIA</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date_Fact_Finder_Completed__c</fullName>
        <inlineHelpText>This is the date the Financial Analyst completed the Fact Finder.</inlineHelpText>
        <label>Date Fact Finder Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Referred_To_Vendor__c</fullName>
        <inlineHelpText>Date we referred the client to the vendor in the referred to field</inlineHelpText>
        <label>Date Referred To Vendor</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Spoke_to_Client__c</fullName>
        <inlineHelpText>This is the date the financial analyst spoke to the client regarding insurance options.</inlineHelpText>
        <label>Date Spoke to Client</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Distribution_Amount__c</fullName>
        <label>Distribution Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Employer_1__c</fullName>
        <label>Employer 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_2__c</fullName>
        <label>Employer 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_Bonus_and_Commission_1__c</fullName>
        <label>Employer Bonus and Commission 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Employer_Bonus_and_Commission_2__c</fullName>
        <label>Employer Bonus and Commission 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Employer_Salary_and_Tips_1__c</fullName>
        <description>Salary &amp; Tips</description>
        <label>Employer Salary and Tips 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Employer_Salary_and_Tips_2__c</fullName>
        <label>Employer Salary and Tips 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fact_Finder_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This box should be checked when the Financial Analyst has completed the Fact Finder.</inlineHelpText>
        <label>Fact Finder Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fact_Finder_Due_Date__c</fullName>
        <label>Fact Finder Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_Determination__c</fullName>
        <inlineHelpText>What was the final determination for the client moving forward?</inlineHelpText>
        <label>Final Determination</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Financial_Analyst__c</fullName>
        <label>Financial Analyst</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Brandon Smith</fullName>
                </value>
                <value>
                    <fullName>Jason Kopp</fullName>
                </value>
                <value>
                    <fullName>Kenzie Connor</fullName>
                </value>
                <value>
                    <fullName>Pia Washington</fullName>
                </value>
                <value>
                    <fullName>Rene Barthe</fullName>
                </value>
                <value>
                    <fullName>Ronald Sucre</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Infinity_360_Recommended__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Infinity 360 Recommended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Initial_Call_ASA_Date__c</fullName>
        <description>Date of the initial ASA Call</description>
        <inlineHelpText>Date of the Initial ASA Call</inlineHelpText>
        <label>Initial Call Scheduled Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Insured_1__c</fullName>
        <label>Insured 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insured_2__c</fullName>
        <label>Insured 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interest_1__c</fullName>
        <label>Interest 1</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Interest_2__c</fullName>
        <label>Interest 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Investment_Priority_Comments__c</fullName>
        <label>Investment Priority Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Investment_Priority__c</fullName>
        <label>Investment Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_this_a_Greg_Boots_client__c</fullName>
        <label>Is this a Greg Boots client?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_to_ASP_report__c</fullName>
        <inlineHelpText>This is a link to the plan developed by the Financial Advisor.</inlineHelpText>
        <label>Link to ASP Report</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Link_to_Fact_Finder__c</fullName>
        <inlineHelpText>This is a link to the Fact Finder report.</inlineHelpText>
        <label>Link to Fact Finder</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Marital_Status__c</fullName>
        <label>Marital Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Single</fullName>
                </value>
                <value>
                    <fullName>Married</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Divorced</fullName>
                </value>
                <value>
                    <fullName>Widowed</fullName>
                </value>
                <value>
                    <fullName>Domestic Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mobile_Phone__c</fullName>
        <label>Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Monthly_Contribution_Amount_1__c</fullName>
        <label>Monthly Contribution Amount 1</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Contribution_Amount_2__c</fullName>
        <label>Monthly Contribution Amount 2</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mortgage_10_End_Date__c</fullName>
        <label>Mortgage 10 End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mortgage_1_End_Date__c</fullName>
        <label>Mortgage 1 End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mortgage_2_End_Date__c</fullName>
        <label>Mortgage 2 End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mortgages_10_Current_Balance__c</fullName>
        <label>Mortgages 10 Current Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mortgages_10_Interest_Rate__c</fullName>
        <label>Mortgages 10 Interest Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Mortgages_10_Name__c</fullName>
        <label>Mortgages 10 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mortgages_10_Original_Balance__c</fullName>
        <label>Mortgages 10 Original Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mortgages_10_Purchase_Date__c</fullName>
        <label>Mortgages 10 Purchase Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mortgages_1_Current_Balance__c</fullName>
        <label>Mortgages 1 Current Balance</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mortgages_1_Interest_Rate__c</fullName>
        <label>Mortgages 1 Interest Rate</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Mortgages_1_Name__c</fullName>
        <label>Mortgages 1 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mortgages_1_Original_Balance__c</fullName>
        <label>Mortgages 1 Original Balance</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mortgages_1_Purchase_Date__c</fullName>
        <label>Mortgages 1 Purchase Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mortgages_2_Current_Balance__c</fullName>
        <label>Mortgages 2 Current Balance</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mortgages_2_Interest_Rate__c</fullName>
        <label>Mortgages 2 Interest Rate</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Mortgages_2_Name__c</fullName>
        <label>Mortgages 2 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mortgages_2_Original_Balance__c</fullName>
        <label>Mortgages 2 Original Balance</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mortgages_2_Purchase_Date__c</fullName>
        <label>Mortgages 2 Purchase Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Name_1_401K__c</fullName>
        <label>Name 1 401K</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_1_403b__c</fullName>
        <label>Name 1 403b</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_1_457b__c</fullName>
        <label>Name 1 457b</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_1_IRA__c</fullName>
        <label>Name 1 IRA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_1_Roth_401k__c</fullName>
        <label>Name 1 Roth 401k</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_1_Roth_IRA__c</fullName>
        <label>Name 1 Roth IRA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_1_SEP_IRA__c</fullName>
        <label>Name 1 SEP IRA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_1_Simple_IRA__c</fullName>
        <label>Name 1 Simple IRA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_1_on_Taxable_Investment_Accounts__c</fullName>
        <label>Name 1 on Taxable Investment Accounts</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_2_401K__c</fullName>
        <label>Name 2 401K</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_2_403b__c</fullName>
        <label>Name 2 403b</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_2_IRA__c</fullName>
        <label>Name 2 IRA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_2_Roth_401k__c</fullName>
        <label>Name 2 Roth 401k</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_2_Roth_IRA__c</fullName>
        <label>Name 2 Roth IRA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_2_SEP_IRA__c</fullName>
        <label>Name 2 SEP IRA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_2_Simple_IRA__c</fullName>
        <label>Name 2 Simple IRA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_2_on_Taxable_Investment_Accounts__c</fullName>
        <label>Name 2 on Taxable Investment Accounts</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_3_401K__c</fullName>
        <label>Name 3 401K</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_3_IRA__c</fullName>
        <label>Name 3 IRA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_3_Roth_401k__c</fullName>
        <label>Name 3 Roth 401k</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_3_Roth_IRA__c</fullName>
        <label>Name 3 Roth IRA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_3_SEP_IRA__c</fullName>
        <label>Name 3 SEP IRA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_3_Simple_IRA__c</fullName>
        <label>Name 3 Simple IRA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Business_1_For__c</fullName>
        <label>New Business 1 For</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Business_2_For__c</fullName>
        <label>New Business 2 For</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Business_3_For__c</fullName>
        <label>New Business 3 for</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Business_Funding_1_Amount__c</fullName>
        <label>New Business/Funding 1 Amount</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Business_Funding_1_Date__c</fullName>
        <label>New Business/Funding 1 Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>New_Business_Funding_2_Amount__c</fullName>
        <label>New Business/Funding 2 Amount</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Business_Funding_2_Date__c</fullName>
        <label>New Business/ Funding 2 Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>New_Business_Funding_3_Amount__c</fullName>
        <description>Amount Needed</description>
        <label>New Business/Funding 3 Amount</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Business_Funding_3_Date__c</fullName>
        <label>New Business/Funding 3 Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>New_Business_Priority_1__c</fullName>
        <description>New Business/ Business Funding</description>
        <label>New Business Priority 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Business_Priority_2__c</fullName>
        <label>New Business Priority 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Business_Priority_3__c</fullName>
        <label>New Business Priority 3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>No_of_Years_Working_1__c</fullName>
        <description>with respect to title/ position</description>
        <label>No. of Years Working 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_of_Years_Working_2__c</fullName>
        <label>No. of Years Working 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Goal_1_Annual_Amount_Needed__c</fullName>
        <label>Other Goal 1 Annual Amount Needed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_Goal_1_Description__c</fullName>
        <label>Other Goal 1 Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Goal_2_Annual_Amount_Needed__c</fullName>
        <label>Other Goal 2 Annual Amount Needed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_Goal_2_Description__c</fullName>
        <label>Other Goal 2 Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Goals_2_Priority__c</fullName>
        <label>Other Goals 2 Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>